# samsara-tss

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: ai-log.md  architecture.md  diagrams.md  presentation-notes.md  scale-evolution.md
docs/superpowers/plans/: 2026-05-06-tss-customer-impact-implementation.md
docs/superpowers/specs/: 2026-05-06-tss-customer-impact-design.md
scripts/: demo.sh  job-dripper.sh
tests/: conftest.py
tests/integration/: test_agent_history.py  test_branch_commit.py  test_capability_matching.py  test_chaos.py  test_concurrent_claim.py  test_epoch_history.py  test_full_flow.py  test_job_detail.py  test_metrics.py  test_mine_filter.py  test_per_job_overrun.py  test_reassignment.py  test_stale_agent.py  test_submitter_filter.py  test_throughput_series.py
tests/unit/: test_chaos.py  test_dispatcher.py  test_dispatcher_persistence.py  test_sqlite_store.py  test_store.py
tss/: cli.py
tss/agent/: chaos.py  runner.py
tss/common/: clock.py  constants.py  models.py
tss/server/: app.py  dispatcher.py  errors.py  registry.py  sqlite_store.py  store.py  watchdog.py
tss/server/routes/: agents.py  demo.py  fleet.py  jobs.py  metrics.py
tss/server/static/: app.js  index.html  style.css
