[project]
name = "samsara-tss"
version = "0.1.0"
description = "Test Scheduling Service — manages a fleet of HIL test agents (testbeds) for Samsara firmware validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "typer>=0.15",
    "rich>=13.9",
    "pydantic>=2.9",
    "pillow>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.115",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pillow>=10.2",
]

[project.scripts]
tss = "tss.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tss"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "chaos: long-running chaos integration tests (deselect with '-m \"not chaos\"')",
]
testpaths = ["tests"]
